# Rolling-Stones-Play-GO-By-Self-Learning

./: CMakeLists.txt  Dockerfile  README.md  env.txt  package.xml  playgo.sh  requirements.txt  setup.py
ROS_master/src/: path_finder.cpp
goboard/: Dockerfile  README.md  docker_entrypoint.sh  env.txt  env.yml  setup.py
goboard/src/: Arena.py  Coach.py  GoGame.py  GoLogic.py  GoNNet.py  MCTS.py  MQTTGoGame.py  NNet.py  ROSGoGame.py  __init__.py  play.py  playgo.py  publishtest.py  train.py  utils.py
goboard/src/goboard/: Game.py  MQTTGoGame.py  ROSGoGame.py  __init__.py  playgo.py
goboard/src/goboard/kerasclasses/: NeuralNet.py
goboard/src/kerasclasses/: NNet.py
goboard/test/: GoGameTests.py
launch/: goboard.launch
mujocoboard/: board.xml  env.xml  make_env.py  mujocogymenv.py  virtualboard.py
mujocoboard/envs/: __init__.py  virtualboard.py
pathplanning/: AStar.cpp  AStar.h  CMakeLists.txt  Main.cpp  Makefile  PathPlanner.cpp  PathPlanner.h  Source.cpp  package.xml
pathplanning/include/: PathPlanner.h
pathplanning/src/: PathPlanner.cpp
real/: test_spin.py
sphero2d_env/src/: shpero_env.py
src/: play.py
src/Go/: GoGame.py  GoLogic.py  GoPlayers.py  testRules.py
src/goboard/: Arena.py  GoGame.py  GoLogic.py  GoPlayers.py  ROSGoGame.py  __init__.py  playgo.py  testRules.py
src/goboard/kerasclasses/: GobangNNet.py  NNet.py
test/: GoGameTests.py
